2007-07-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (ipmi_lan_cmd,
	ipmi_lan_cmd_raw): Fix return code bug.
	
2007-07-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi, doc/freeipmi-hostrange.txt: Update w/
	some forgotten 0.4.0 stuff.

2007-07-02  Albert Chu <chu11@llnl.gov>

        * freeipmi.spec.in: Fix URL for release.

        * Tagged Release-0_4_0_beta0	

2007-07-02  Albert Chu <chu11@llnl.gov>

	* Tagged Release-0_4_0_base.

	* Branched Release-0_4_0_branch.

2007-07-02  Albert Chu <chu11@llnl.gov>

	* configure.ac: Update version for release.
	
2007-06-29  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(ipmiconsole_engine_setup): Fix bad debug output corner case.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_teardown_initiate): New function.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_poll_setup, _ipmiconsole_engine): Re-arch teardown to be quicker
	by initializing close_session prior to the processing of contexts.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c: Support
	console_engine_ctxs_notifier pipes.  Allows for the engine poll()
	call to be "interrupted" so engine can react more quickly to 
	calls from user space.
		
2007-06-28  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h: Add/fix comments
	for clarification.

	* ipmiconsole/src/libipmiconsole: Add flag to close the user_fd
	within the library if it has never been retrieved by the user.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit, ipmiconsole_engine_submit_block,
	ipmiconsole_ctx_destroy): Fix locking corner cases and bugs.
	
2007-06-27  Albert Chu <chu11@llnl.gov>
 
	* ipmi-fru/: New project.

	* COPYING.ipmi-fru, DISCLAIMER.ipmi-fru: New files.

	* libfreeipmi/include/freeipmi/udm/ipmi-fru-inventory-device-cmds-udm.h
	libfreeipmi/include/freeipmi/ipmi-fru-inventory-device-cmds.h