@@ -50,21 +50,20 @@ enum ipmi_errnum
     IPMI_ERR_DEVICE_NOT_OPEN = 11,
     IPMI_ERR_DEVICE_NOT_SUPPORTED = 12,
     IPMI_ERR_DEVICE_NOT_FOUND = 13,
-    IPMI_ERR_BAD_COMPLETION_CODE_NODE_BUSY = 14,
-    IPMI_ERR_BAD_COMPLETION_CODE_INVALID_COMMAND = 15,
-    IPMI_ERR_BAD_COMPLETION_CODE_REQUEST_DATA_INVALID = 16,
-    IPMI_ERR_BAD_COMPLETION_CODE_INSUFFICIENT_PRIVILEGE = 17,
-    IPMI_ERR_BAD_COMPLETION_CODE = 18,
-    IPMI_ERR_BMC_BUSY = 19,
-    IPMI_ERR_OUT_OF_MEMORY = 20,
-    IPMI_ERR_INVALID_HOSTNAME = 21,
-    IPMI_ERR_INVALID_PARAMETERS = 22,
-    IPMI_ERR_DRIVER_PATH_REQUIRED = 23,
-    IPMI_ERR_INTERNAL_IPMI_ERROR = 24,
-    IPMI_ERR_INTERNAL_SYSTEM_ERROR = 25,
-    IPMI_ERR_INTERNAL_LIBRARY_ERROR = 26,
-    IPMI_ERR_INTERNAL_ERROR = 27,
-    IPMI_ERR_OUTOFRANGE = 28,
+    IPMI_ERR_BAD_COMPLETION_CODE_INVALID_COMMAND = 14,
+    IPMI_ERR_BAD_COMPLETION_CODE_REQUEST_DATA_INVALID = 15,
+    IPMI_ERR_BAD_COMPLETION_CODE_INSUFFICIENT_PRIVILEGE = 16,
+    IPMI_ERR_BAD_COMPLETION_CODE = 17,
+    IPMI_ERR_BMC_BUSY = 18,
+    IPMI_ERR_OUT_OF_MEMORY = 10,
+    IPMI_ERR_INVALID_HOSTNAME = 20,
+    IPMI_ERR_INVALID_PARAMETERS = 21,
+    IPMI_ERR_DRIVER_PATH_REQUIRED = 22,
+    IPMI_ERR_INTERNAL_IPMI_ERROR = 23,
+    IPMI_ERR_INTERNAL_SYSTEM_ERROR = 24,
+    IPMI_ERR_INTERNAL_LIBRARY_ERROR = 25,
+    IPMI_ERR_INTERNAL_ERROR = 26,
+    IPMI_ERR_OUTOFRANGE = 27,
   };
 typedef enum ipmi_errnum ipmi_errnum_type_t;
 
